<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="445dp"
    android:gravity="center|fill_horizontal"
    android:orientation="vertical"
    tools:context=".DetailTaskActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="17dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/bt_listen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/play" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="23dp"
            android:text="@string/text" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="90dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:text="@string/video" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <VideoView
            android:id="@+id/vv_video"
            android:layout_width="wrap_content"
            android:layout_height="122dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="150dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_geo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:text="@string/geo" />

    <fragment
        android:id="@+id/map_detail"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.13" />

</LinearLayout>