<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TagsActivity" >

    <TextView
        android:id="@+id/tv_geo_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tags" />

    <ImageButton
        android:id="@+id/bt_trabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bt_personal"
        android:layout_alignTop="@+id/bt_ocio"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/trabajo" />

    <Button
        android:id="@+id/bt_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_todas"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:text="@string/speak" />

    <ImageButton
        android:id="@+id/bt_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt_personal"
        android:layout_alignRight="@+id/bt_ocio"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/compra" />

    <ImageButton
        android:id="@+id/bt_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/bt_speak"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/personal" />

    <Button
        android:id="@+id/bt_todas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_compra"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/todas" />

    <ImageButton
        android:id="@+id/bt_ocio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_todas"
        android:layout_marginBottom="19dp"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/bt_todas"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/ocio" />

</RelativeLayout>